--- a/common-web/src/main/css/resourcelist.css
+++ b/common-web/src/main/css/resourcelist.css
@@ -3,6 +3,7 @@
     border-radius: 0 10px 0 0;
     background-color: #191919;
     height: 100%;
+    overflow: auto;
 }
 
 .jsh-resourcelistheader-hackname {
@@ -22,10 +23,8 @@
 }
 
 .jsh-resourcelistitem, .jsh-resourcelistheader {
-    padding-top: 2px;
-    padding-bottom: 2px;
-    margin-top: 2px;
-    margin-bottom: 2px;
+    padding: 0.3em;
+    margin-bottom: 0.3em;
     border: 1px solid transparent;
 }
 
